--- a/Polar_DNN_ber.ipynb
+++ b/Polar_DNN_ber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "N = 4\n",
-    "K = 2"
+    "N = 8\n",
+    "K = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -181,10 +181,10 @@
     {
      "data": {
       "text/plain": [
-       "[2, 3]"
+       "[3, 5, 6, 7]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -211,32 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0],\n",
-       "       [0, 1],\n",
-       "       [1, 0],\n",
-       "       [1, 1]])"
-      ]
-     },
-     "execution_count": 209,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b[:,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -247,10 +222,59 @@
        "array([[0, 0, 0, 0],\n",
        "       [0, 0, 0, 1],\n",
        "       [0, 0, 1, 0],\n",
-       "       [0, 0, 1, 1]])"
+       "       [0, 0, 1, 1],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 1, 0, 1],\n",
+       "       [0, 1, 1, 0],\n",
+       "       [0, 1, 1, 1],\n",
+       "       [1, 0, 0, 0],\n",
+       "       [1, 0, 0, 1],\n",
+       "       [1, 0, 1, 0],\n",
+       "       [1, 0, 1, 1],\n",
+       "       [1, 1, 0, 0],\n",
+       "       [1, 1, 0, 1],\n",
+       "       [1, 1, 1, 0],\n",
+       "       [1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 1],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 1, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 1, 1],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 1, 1],\n",
+       "       [0, 0, 0, 1, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 0, 0, 1, 0, 1, 1, 0],\n",
+       "       [0, 0, 0, 1, 0, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -269,13 +293,25 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  1,  1,  1],\n",
-       "       [-1, -1, -1, -1],\n",
-       "       [-1,  1, -1,  1],\n",
-       "       [ 1, -1,  1, -1]])"
+       "array([[ 1,  1,  1,  1,  1,  1,  1,  1],\n",
+       "       [-1, -1, -1, -1, -1, -1, -1, -1],\n",
+       "       [-1,  1, -1,  1, -1,  1, -1,  1],\n",
+       "       [ 1, -1,  1, -1,  1, -1,  1, -1],\n",
+       "       [-1, -1,  1,  1, -1, -1,  1,  1],\n",
+       "       [ 1,  1, -1, -1,  1,  1, -1, -1],\n",
+       "       [ 1, -1, -1,  1,  1, -1, -1,  1],\n",
+       "       [-1,  1,  1, -1, -1,  1,  1, -1],\n",
+       "       [-1, -1, -1, -1,  1,  1,  1,  1],\n",
+       "       [ 1,  1,  1,  1, -1, -1, -1, -1],\n",
+       "       [ 1, -1,  1, -1, -1,  1, -1,  1],\n",
+       "       [-1,  1, -1,  1,  1, -1,  1, -1],\n",
+       "       [ 1,  1, -1, -1, -1, -1,  1,  1],\n",
+       "       [-1, -1,  1,  1,  1,  1, -1, -1],\n",
+       "       [-1,  1,  1, -1,  1, -1, -1,  1],\n",
+       "       [ 1, -1, -1,  1, -1,  1,  1, -1]])"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -330,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -340,140 +376,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0.198553\n",
-      "1000\n",
-      "0.149134\n",
-      "2000\n",
-      "0.129354\n",
-      "3000\n",
-      "0.120017\n",
-      "4000\n",
-      "0.126486\n",
-      "5000\n",
-      "0.0872497\n",
-      "6000\n",
-      "0.084933\n",
-      "7000\n",
-      "0.0610006\n",
-      "8000\n",
-      "0.0603338\n",
-      "9000\n",
-      "0.0523601\n",
-      "10000\n",
-      "0.0592973\n",
-      "11000\n",
-      "0.0526446\n",
-      "12000\n",
-      "0.0478151\n",
-      "13000\n",
-      "0.0372588\n",
-      "14000\n",
-      "0.0392708\n",
-      "15000\n",
-      "0.062213\n",
-      "16000\n",
-      "0.0389597\n",
-      "17000\n",
-      "0.0526303\n",
-      "18000\n",
-      "0.0392722\n",
-      "19000\n",
-      "0.0342201\n",
-      "20000\n",
-      "0.0335977\n",
-      "21000\n",
-      "0.0325852\n",
-      "22000\n",
-      "0.0323806\n",
-      "23000\n",
-      "0.0814263\n",
-      "24000\n",
-      "0.0253377\n",
-      "25000\n",
-      "0.0312647\n",
-      "26000\n",
-      "0.0376932\n",
-      "27000\n",
-      "0.0173976\n",
-      "28000\n",
-      "0.0312127\n",
-      "29000\n",
-      "0.0143645\n",
-      "30000\n",
-      "0.0140978\n",
-      "31000\n",
-      "0.0141563\n",
-      "32000\n",
-      "0.0120752\n",
-      "33000\n",
-      "0.0119091\n",
-      "34000\n",
-      "0.11043\n",
-      "35000\n",
-      "0.00984312\n",
-      "36000\n",
-      "0.0187313\n",
-      "37000\n",
-      "0.0108363\n",
-      "38000\n",
-      "0.0517202\n",
-      "39000\n",
-      "0.117899\n",
-      "40000\n",
-      "0.00634809\n",
-      "41000\n",
-      "0.0431389\n",
-      "42000\n",
-      "0.00886906\n",
-      "43000\n",
-      "0.0106179\n",
-      "44000\n",
-      "0.00708729\n",
-      "45000\n",
-      "0.00573385\n",
-      "46000\n",
-      "0.0212009\n",
-      "47000\n",
-      "0.0179291\n",
-      "48000\n",
-      "0.00449727\n",
-      "49000\n",
-      "0.00422526\n",
-      "50000\n",
-      "0.0040425\n",
-      "51000\n",
-      "0.00397039\n",
-      "52000\n",
-      "0.00625772\n",
-      "53000\n",
-      "0.00500973\n",
-      "54000\n",
-      "0.00367481\n",
-      "55000\n",
-      "0.0557706\n",
-      "56000\n",
-      "0.00340157\n",
-      "57000\n",
-      "0.00656313\n",
-      "58000\n",
-      "0.0053603\n",
-      "59000\n",
-      "0.00339337\n",
-      "60000\n",
-      "0.00319816\n",
-      "61000\n",
-      "0.00369629\n",
-      "62000\n",
-      "0.00296626\n",
-      "63000\n",
-      "0.00396234\n",
-      "64000\n",
-      "0.0121293\n",
-      "65000\n",
-      "0.00316288\n",
-      "Accuracy:\n",
-      "0.9375\n"
+      "0 -> 0.242369\n",
+      "epoch: 1024\n",
+      "cost: 0.160219\n",
+      "Accuracy: 0.796875\n",
+      "-----------------------------------------\n",
+      "0 -> 0.142363\n",
+      "epoch: 4096\n",
+      "cost: 0.105328\n",
+      "Accuracy: 0.875\n",
+      "-----------------------------------------\n",
+      "0 -> 0.0996464\n",
+      "4096 -> 0.0766568\n",
+      "8192 -> 0.0667086\n",
+      "12288 -> 0.0599559\n",
+      "epoch: 16384\n",
+      "cost: 0.0650396\n",
+      "Accuracy: 0.898438\n",
+      "-----------------------------------------\n",
+      "0 -> 0.056566\n",
+      "4096 -> 0.0654249\n",
+      "8192 -> 0.0561781\n",
+      "12288 -> 0.0598908\n",
+      "16384 -> 0.047503\n",
+      "20480 -> 0.0752283\n",
+      "24576 -> 0.0240576\n",
+      "28672 -> 0.0290413\n",
+      "32768 -> 0.0327752\n",
+      "36864 -> 0.0391855\n",
+      "40960 -> 0.0291064\n",
+      "45056 -> 0.0302353\n",
+      "49152 -> 0.0324058\n",
+      "53248 -> 0.0280129\n",
+      "57344 -> 0.0211993\n",
+      "61440 -> 0.024653\n",
+      "epoch: 65536\n",
+      "cost: 0.0562174\n",
+      "Accuracy: 0.984375\n",
+      "-----------------------------------------\n",
+      "0 -> 0.0112464\n",
+      "4096 -> 0.0186474\n",
+      "8192 -> 0.0284932\n",
+      "12288 -> 0.02386\n",
+      "16384 -> 0.0161472\n",
+      "20480 -> 0.0118446\n",
+      "24576 -> 0.0233308\n",
+      "28672 -> 0.0173963\n",
+      "32768 -> 0.0278685\n",
+      "36864 -> 0.0157257\n",
+      "40960 -> 0.0115053\n",
+      "45056 -> 0.0133207\n",
+      "49152 -> 0.0146215\n",
+      "53248 -> 0.0107517\n",
+      "57344 -> 0.0291638\n",
+      "61440 -> 0.0377803\n",
+      "65536 -> 0.0243259\n",
+      "69632 -> 0.0251304\n",
+      "73728 -> 0.0125682\n",
+      "77824 -> 0.0407532\n",
+      "81920 -> 0.0147198\n",
+      "86016 -> 0.019338\n",
+      "90112 -> 0.00391308\n",
+      "94208 -> 0.00872118\n",
+      "98304 -> 0.0237702\n",
+      "102400 -> 0.00940642\n",
+      "106496 -> 0.0120151\n",
+      "110592 -> 0.0173919\n",
+      "114688 -> 0.0113894\n",
+      "118784 -> 0.00617755\n",
+      "122880 -> 0.0266253\n",
+      "126976 -> 0.0368135\n",
+      "131072 -> 0.0136612\n",
+      "135168 -> 0.0180164\n",
+      "139264 -> 0.0259869\n",
+      "143360 -> 0.00733525\n",
+      "147456 -> 0.00895879\n",
+      "151552 -> 0.00624034\n",
+      "155648 -> 0.00337689\n",
+      "159744 -> 0.023405\n",
+      "163840 -> 0.0111474\n",
+      "167936 -> 0.00780283\n",
+      "172032 -> 0.0102306\n",
+      "176128 -> 0.0112927\n",
+      "180224 -> 0.00933517\n",
+      "184320 -> 0.0137447\n",
+      "188416 -> 0.00334235\n",
+      "192512 -> 0.00366458\n",
+      "196608 -> 0.0076449\n",
+      "200704 -> 0.0191\n",
+      "204800 -> 0.00109526\n",
+      "208896 -> 0.00690879\n",
+      "212992 -> 0.0255099\n",
+      "217088 -> 0.0144147\n",
+      "221184 -> 0.0135706\n",
+      "225280 -> 0.0186985\n",
+      "229376 -> 0.00299939\n",
+      "233472 -> 0.0267356\n",
+      "237568 -> 0.0197339\n",
+      "241664 -> 0.00907482\n",
+      "245760 -> 0.00614092\n",
+      "249856 -> 0.0170978\n",
+      "253952 -> 0.010573\n",
+      "258048 -> 0.00432896\n",
+      "epoch: 262144\n",
+      "cost: 0.00562402\n",
+      "Accuracy: 0.984375\n",
+      "-----------------------------------------\n"
      ]
     }
    ],
@@ -481,20 +489,27 @@
     "sess = tf.Session()\n",
     "sess.run(init)\n",
     "\n",
-    "for step in range(2**16):\n",
-    "    sess.run(train, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u})\n",
-    "    \n",
-    "    if step % 1000 == 0:\n",
-    "        print(step)\n",
-    "        print(sess.run(cost, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u})) \n",
-    "        #print(sess.run(W1, feed_dict={X:x, Y:u}))\n",
-    "        \n",
-    "#correct_prediction = tf.equal(tf.round(2*hypo-1), Y)\n",
-    "correct_prediction = tf.equal(tf.round(hypo), Y)\n",
+    "sigma = sigma_train\n",
     "\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction,\"float\"))\n",
-    "print(\"Accuracy:\")\n",
-    "print(sess.run(accuracy, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n"
+    "for t in range(5):\n",
+    "\n",
+    "    for step in range(2**(2*t+10)):\n",
+    "        sess.run(train, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u})\n",
+    "\n",
+    "        if step % 2**12 == 0:\n",
+    "            print(step,\"->\" ,sess.run(cost, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
+    "            \n",
+    "\n",
+    "    #correct_prediction = tf.equal(tf.round(2*hypo-1), Y)\n",
+    "    correct_prediction = tf.equal(tf.round(hypo), Y)\n",
+    "\n",
+    "    accuracy = tf.reduce_mean(tf.cast(correct_prediction,\"float\"))\n",
+    "    \n",
+    "    print(\"epoch:\", 2**(2*t+10))\n",
+    "    print(\"cost:\", sess.run(cost, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
+    "    print(\"Accuracy:\", sess.run(accuracy, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
+    "    print(\"-----------------------------------------\")\n",
+    "\n"
    ]
   },
   {
