--- a/Polar_DNN_ber.ipynb
+++ b/Polar_DNN_ber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +184,7 @@
        "[3, 5, 6, 7]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
        "       [1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
        "       [0, 0, 0, 1, 0, 1, 1, 1]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +311,7 @@
        "       [ 1, -1, -1,  1, -1,  1,  1, -1]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -376,111 +376,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -> 0.242369\n",
       "epoch: 1024\n",
-      "cost: 0.160219\n",
+      "-- 0 -> 0.444688\n",
+      "-- 1023 -> 0.271373\n",
+      "cost: 0.252981\n",
+      "Accuracy: 0.65625\n",
+      "-----------------------------------------\n",
+      "epoch: 4096\n",
+      "-- 0 -> 0.273244\n",
+      "-- 4095 -> 0.133913\n",
+      "cost: 0.156814\n",
       "Accuracy: 0.796875\n",
       "-----------------------------------------\n",
-      "0 -> 0.142363\n",
-      "epoch: 4096\n",
-      "cost: 0.105328\n",
-      "Accuracy: 0.875\n",
-      "-----------------------------------------\n",
-      "0 -> 0.0996464\n",
-      "4096 -> 0.0766568\n",
-      "8192 -> 0.0667086\n",
-      "12288 -> 0.0599559\n",
       "epoch: 16384\n",
-      "cost: 0.0650396\n",
-      "Accuracy: 0.898438\n",
+      "-- 0 -> 0.128879\n",
+      "-- 10000 -> 0.0813735\n",
+      "cost: 0.0733791\n",
+      "Accuracy: 0.890625\n",
       "-----------------------------------------\n",
-      "0 -> 0.056566\n",
-      "4096 -> 0.0654249\n",
-      "8192 -> 0.0561781\n",
-      "12288 -> 0.0598908\n",
-      "16384 -> 0.047503\n",
-      "20480 -> 0.0752283\n",
-      "24576 -> 0.0240576\n",
-      "28672 -> 0.0290413\n",
-      "32768 -> 0.0327752\n",
-      "36864 -> 0.0391855\n",
-      "40960 -> 0.0291064\n",
-      "45056 -> 0.0302353\n",
-      "49152 -> 0.0324058\n",
-      "53248 -> 0.0280129\n",
-      "57344 -> 0.0211993\n",
-      "61440 -> 0.024653\n",
       "epoch: 65536\n",
-      "cost: 0.0562174\n",
-      "Accuracy: 0.984375\n",
+      "-- 0 -> 0.0698437\n",
+      "-- 10000 -> 0.0775487\n",
+      "-- 20000 -> 0.0565692\n",
+      "-- 30000 -> 0.0621673\n",
+      "-- 40000 -> 0.052276\n",
+      "-- 50000 -> 0.0418225\n",
+      "-- 60000 -> 0.0301563\n",
+      "cost: 0.0236435\n",
+      "Accuracy: 0.953125\n",
       "-----------------------------------------\n",
-      "0 -> 0.0112464\n",
-      "4096 -> 0.0186474\n",
-      "8192 -> 0.0284932\n",
-      "12288 -> 0.02386\n",
-      "16384 -> 0.0161472\n",
-      "20480 -> 0.0118446\n",
-      "24576 -> 0.0233308\n",
-      "28672 -> 0.0173963\n",
-      "32768 -> 0.0278685\n",
-      "36864 -> 0.0157257\n",
-      "40960 -> 0.0115053\n",
-      "45056 -> 0.0133207\n",
-      "49152 -> 0.0146215\n",
-      "53248 -> 0.0107517\n",
-      "57344 -> 0.0291638\n",
-      "61440 -> 0.0377803\n",
-      "65536 -> 0.0243259\n",
-      "69632 -> 0.0251304\n",
-      "73728 -> 0.0125682\n",
-      "77824 -> 0.0407532\n",
-      "81920 -> 0.0147198\n",
-      "86016 -> 0.019338\n",
-      "90112 -> 0.00391308\n",
-      "94208 -> 0.00872118\n",
-      "98304 -> 0.0237702\n",
-      "102400 -> 0.00940642\n",
-      "106496 -> 0.0120151\n",
-      "110592 -> 0.0173919\n",
-      "114688 -> 0.0113894\n",
-      "118784 -> 0.00617755\n",
-      "122880 -> 0.0266253\n",
-      "126976 -> 0.0368135\n",
-      "131072 -> 0.0136612\n",
-      "135168 -> 0.0180164\n",
-      "139264 -> 0.0259869\n",
-      "143360 -> 0.00733525\n",
-      "147456 -> 0.00895879\n",
-      "151552 -> 0.00624034\n",
-      "155648 -> 0.00337689\n",
-      "159744 -> 0.023405\n",
-      "163840 -> 0.0111474\n",
-      "167936 -> 0.00780283\n",
-      "172032 -> 0.0102306\n",
-      "176128 -> 0.0112927\n",
-      "180224 -> 0.00933517\n",
-      "184320 -> 0.0137447\n",
-      "188416 -> 0.00334235\n",
-      "192512 -> 0.00366458\n",
-      "196608 -> 0.0076449\n",
-      "200704 -> 0.0191\n",
-      "204800 -> 0.00109526\n",
-      "208896 -> 0.00690879\n",
-      "212992 -> 0.0255099\n",
-      "217088 -> 0.0144147\n",
-      "221184 -> 0.0135706\n",
-      "225280 -> 0.0186985\n",
-      "229376 -> 0.00299939\n",
-      "233472 -> 0.0267356\n",
-      "237568 -> 0.0197339\n",
-      "241664 -> 0.00907482\n",
-      "245760 -> 0.00614092\n",
-      "249856 -> 0.0170978\n",
-      "253952 -> 0.010573\n",
-      "258048 -> 0.00432896\n",
       "epoch: 262144\n",
-      "cost: 0.00562402\n",
-      "Accuracy: 0.984375\n",
+      "-- 0 -> 0.0349099\n",
+      "-- 10000 -> 0.0416556\n",
+      "-- 20000 -> 0.0219327\n",
+      "-- 30000 -> 0.0307177\n",
+      "-- 40000 -> 0.015426\n",
+      "-- 50000 -> 0.0193253\n",
+      "-- 60000 -> 0.0255194\n",
+      "-- 70000 -> 0.0279481\n",
+      "-- 80000 -> 0.0129098\n",
+      "-- 90000 -> 0.0154889\n",
+      "-- 100000 -> 0.0304981\n",
+      "-- 110000 -> 0.0149551\n",
+      "-- 120000 -> 0.0118097\n",
+      "-- 130000 -> 0.0152324\n",
+      "-- 140000 -> 0.00816998\n",
+      "-- 150000 -> 0.0142979\n",
+      "-- 160000 -> 0.0108891\n",
+      "-- 170000 -> 0.0124554\n",
+      "-- 180000 -> 0.00977791\n",
+      "-- 190000 -> 0.0119011\n",
+      "-- 200000 -> 0.00802658\n",
+      "-- 210000 -> 0.00981525\n",
+      "-- 220000 -> 0.0130082\n",
+      "-- 230000 -> 0.0299572\n",
+      "-- 240000 -> 0.016227\n",
+      "-- 250000 -> 0.0143274\n",
+      "-- 260000 -> 0.00862368\n",
+      "cost: 0.00460424\n",
+      "Accuracy: 0.976562\n",
       "-----------------------------------------\n"
      ]
     }
@@ -492,12 +446,14 @@
     "sigma = sigma_train\n",
     "\n",
     "for t in range(5):\n",
-    "\n",
+    "    \n",
+    "    print(\"epoch:\", 2**(2*t+10))\n",
+    "    \n",
     "    for step in range(2**(2*t+10)):\n",
     "        sess.run(train, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u})\n",
     "\n",
-    "        if step % 2**12 == 0:\n",
-    "            print(step,\"->\" ,sess.run(cost, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
+    "        if step % (np.minimum(2**(2*t+10)-1, 10000)) == 0:\n",
+    "            print(\"--\",step,\"->\" ,sess.run(cost, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
     "            \n",
     "\n",
     "    #correct_prediction = tf.equal(tf.round(2*hypo-1), Y)\n",
@@ -505,7 +461,6 @@
     "\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction,\"float\"))\n",
     "    \n",
-    "    print(\"epoch:\", 2**(2*t+10))\n",
     "    print(\"cost:\", sess.run(cost, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
     "    print(\"Accuracy:\", sess.run(accuracy, feed_dict={X:x+np.random.normal(0,sigma,(2**K, N)), Y:u}))\n",
     "    print(\"-----------------------------------------\")\n",
