--- a/Polar_DNN_(4.8)_N N N K.ipynb
+++ b/Polar_DNN_(4.8)_N N N K.ipynb
@@ -322,15 +322,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "Layer1 = 128\n",
-    "Layer2 = 64\n",
-    "Layer3 = 32\n",
+    "Layer1 = N\n",
+    "Layer2 = N\n",
+    "Layer3 = N\n",
     "Layer4 = K\n",
     "\n",
     "\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -377,44 +377,65 @@
      "output_type": "stream",
      "text": [
       "epoch: 1024\n",
-      "-- 0 -> 0.350536\n",
-      "-- 1023 -> 0.221777\n",
-      "cost: 0.237886\n",
-      "Accuracy: 0.703125\n",
+      "-- 0 -> 0.333852\n",
+      "-- 1023 -> 0.250691\n",
+      "cost: 0.224742\n",
+      "Accuracy: 0.640625\n",
       "-----------------------------------------\n",
       "epoch: 4096\n",
-      "-- 0 -> 0.220813\n",
-      "-- 4095 -> 0.166414\n",
-      "cost: 0.181444\n",
-      "Accuracy: 0.765625\n",
+      "-- 0 -> 0.219979\n",
+      "-- 4095 -> 0.162257\n",
+      "cost: 0.166111\n",
+      "Accuracy: 0.734375\n",
       "-----------------------------------------\n",
       "epoch: 16384\n",
-      "-- 0 -> 0.176318\n",
-      "-- 10000 -> 0.140885\n",
-      "cost: 0.142141\n",
-      "Accuracy: 0.890625\n",
+      "-- 0 -> 0.18448\n",
+      "-- 10000 -> 0.130575\n",
+      "cost: 0.0874613\n",
+      "Accuracy: 0.859375\n",
       "-----------------------------------------\n",
       "epoch: 65536\n",
-      "-- 0 -> 0.111383\n",
-      "-- 10000 -> 0.0824692\n",
-      "-- 20000 -> 0.0771428\n",
-      "-- 30000 -> 0.0667408\n",
-      "-- 40000 -> 0.0556372\n",
-      "-- 50000 -> 0.0340705\n",
-      "-- 60000 -> 0.0449636\n",
-      "cost: 0.049632\n",
-      "Accuracy: 0.890625\n",
+      "-- 0 -> 0.0879552\n",
+      "-- 10000 -> 0.0716435\n",
+      "-- 20000 -> 0.0784628\n",
+      "-- 30000 -> 0.0485223\n",
+      "-- 40000 -> 0.0351253\n",
+      "-- 50000 -> 0.0179536\n",
+      "-- 60000 -> 0.0644525\n",
+      "cost: 0.0249136\n",
+      "Accuracy: 0.96875\n",
       "-----------------------------------------\n",
       "epoch: 262144\n",
-      "-- 0 -> 0.0186067\n",
-      "-- 10000 -> 0.0547432\n",
-      "-- 20000 -> 0.0277406\n",
-      "-- 30000 -> 0.0492594\n",
-      "-- 40000 -> 0.0365304\n",
-      "-- 50000 -> 0.0420827\n",
-      "-- 60000 -> 0.0198139\n",
-      "-- 70000 -> 0.0542691\n",
-      "-- 80000 -> 0.0615399\n"
+      "-- 0 -> 0.032342\n",
+      "-- 10000 -> 0.0389958\n",
+      "-- 20000 -> 0.00335504\n",
+      "-- 30000 -> 0.0397942\n",
+      "-- 40000 -> 0.0207653\n",
+      "-- 50000 -> 0.0534032\n",
+      "-- 60000 -> 0.0390825\n",
+      "-- 70000 -> 0.0524014\n",
+      "-- 80000 -> 0.0268719\n",
+      "-- 90000 -> 0.0170355\n",
+      "-- 100000 -> 0.00483888\n",
+      "-- 110000 -> 0.0225223\n",
+      "-- 120000 -> 0.00194247\n",
+      "-- 130000 -> 0.0213757\n",
+      "-- 140000 -> 0.0159104\n",
+      "-- 150000 -> 0.0199989\n",
+      "-- 160000 -> 0.00284484\n",
+      "-- 170000 -> 0.018477\n",
+      "-- 180000 -> 0.0421161\n",
+      "-- 190000 -> 0.0171585\n",
+      "-- 200000 -> 0.0258096\n",
+      "-- 210000 -> 0.00437475\n",
+      "-- 220000 -> 0.0130183\n",
+      "-- 230000 -> 0.0231344\n",
+      "-- 240000 -> 0.0231545\n",
+      "-- 250000 -> 0.0317318\n",
+      "-- 260000 -> 0.0104154\n",
+      "cost: 0.0263578\n",
+      "Accuracy: 1.0\n",
+      "-----------------------------------------\n"
      ]
     }
    ],
