--- a/Polar_DNN_(4 8)_128 64 32 K.ipynb
+++ b/Polar_DNN_(4 8)_128 64 32 K.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +184,7 @@
        "[3, 5, 6, 7]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
        "       [1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
        "       [0, 0, 0, 1, 0, 1, 1, 1]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +311,7 @@
        "       [ 1, -1, -1,  1, -1,  1,  1, -1]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -377,44 +377,34 @@
      "output_type": "stream",
      "text": [
       "epoch: 1024\n",
-      "-- 0 -> 0.350536\n",
-      "-- 1023 -> 0.221777\n",
-      "cost: 0.237886\n",
-      "Accuracy: 0.703125\n",
+      "-- 0 -> 0.471064\n",
+      "-- 1023 -> 0.442651\n",
+      "cost: 0.405348\n",
+      "Accuracy: 0.65625\n",
       "-----------------------------------------\n",
       "epoch: 4096\n",
-      "-- 0 -> 0.220813\n",
-      "-- 4095 -> 0.166414\n",
-      "cost: 0.181444\n",
+      "-- 0 -> 0.390764\n",
+      "-- 4095 -> 0.262467\n",
+      "cost: 0.265327\n",
       "Accuracy: 0.765625\n",
       "-----------------------------------------\n",
       "epoch: 16384\n",
-      "-- 0 -> 0.176318\n",
-      "-- 10000 -> 0.140885\n",
-      "cost: 0.142141\n",
-      "Accuracy: 0.890625\n",
+      "-- 0 -> 0.265625\n",
+      "-- 10000 -> 0.0636244\n",
+      "cost: 0.000626147\n",
+      "Accuracy: 0.984375\n",
       "-----------------------------------------\n",
       "epoch: 65536\n",
-      "-- 0 -> 0.111383\n",
-      "-- 10000 -> 0.0824692\n",
-      "-- 20000 -> 0.0771428\n",
-      "-- 30000 -> 0.0667408\n",
-      "-- 40000 -> 0.0556372\n",
-      "-- 50000 -> 0.0340705\n",
-      "-- 60000 -> 0.0449636\n",
-      "cost: 0.049632\n",
-      "Accuracy: 0.890625\n",
-      "-----------------------------------------\n",
-      "epoch: 262144\n",
-      "-- 0 -> 0.0186067\n",
-      "-- 10000 -> 0.0547432\n",
-      "-- 20000 -> 0.0277406\n",
-      "-- 30000 -> 0.0492594\n",
-      "-- 40000 -> 0.0365304\n",
-      "-- 50000 -> 0.0420827\n",
-      "-- 60000 -> 0.0198139\n",
-      "-- 70000 -> 0.0542691\n",
-      "-- 80000 -> 0.0615399\n"
+      "-- 0 -> 0.00189149\n",
+      "-- 10000 -> 0.000350422\n",
+      "-- 20000 -> 8.88178e-16\n",
+      "-- 30000 -> 0.0152597\n",
+      "-- 40000 -> 3.11958e-08\n",
+      "-- 50000 -> 4.84482e-11\n",
+      "-- 60000 -> 0.00388975\n",
+      "cost: 2.56684e-13\n",
+      "Accuracy: 1.0\n",
+      "-----------------------------------------\n"
      ]
     }
    ],
@@ -424,7 +414,7 @@
     "\n",
     "sigma = sigma_train\n",
     "\n",
-    "for t in range(5):\n",
+    "for t in range(4):\n",
     "    \n",
     "    print(\"epoch:\", 2**(2*t+10))\n",
     "    \n",
